--- a/GitBackupKeeper/GitBackupKeeper.csproj
+++ b/GitBackupKeeper/GitBackupKeeper.csproj
@@ -47,6 +47,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -128,9 +129,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="icon_tt6_icon.ico" />
   </ItemGroup>
   <ItemGroup>
     <Resource Include="icon_7eA_icon.ico" />
