--- a/GitBackupKeeper/packages.config
+++ b/GitBackupKeeper/packages.config
@@ -2,4 +2,8 @@
 <packages>
   <package id="LibGit2Sharp" version="0.24.1" targetFramework="net452" />
   <package id="LibGit2Sharp.NativeBinaries" version="1.0.205" targetFramework="net452" />
+  <package id="Microsoft.Bcl" version="1.1.9" targetFramework="net452" />
+  <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net452" />
+  <package id="Microsoft.Net.Http" version="2.2.28" targetFramework="net452" />
+  <package id="WebDAVClient" version="1.1.3" targetFramework="net452" />
 </packages>
