--- a/GitBackupKeeper/packages.config
+++ b/GitBackupKeeper/packages.config
@@ -5,5 +5,5 @@
   <package id="Microsoft.Bcl" version="1.1.9" targetFramework="net452" />
   <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net452" />
   <package id="Microsoft.Net.Http" version="2.2.28" targetFramework="net452" />
-  <package id="WebDAVClient" version="1.1.3" targetFramework="net452" />
+  <package id="WebDav.Client" version="2.1.0" targetFramework="net452" />
 </packages>
