--- a/GitBackupKeeper/GitBackupKeeper.csproj
+++ b/GitBackupKeeper/GitBackupKeeper.csproj
@@ -59,6 +59,7 @@
     </Reference>
     <Reference Include="System.Net.Http.WebRequest" />
     <Reference Include="System.Security" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
