--- a/GitBackupKeeper/packages.config
+++ b/GitBackupKeeper/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="DotNetZip" version="1.10.1" targetFramework="net452" />
   <package id="LibGit2Sharp" version="0.24.1" targetFramework="net452" />
   <package id="LibGit2Sharp.NativeBinaries" version="1.0.205" targetFramework="net452" />
   <package id="Microsoft.Bcl" version="1.1.9" targetFramework="net452" />
